--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ yat:
 # content_width: "920px"
 
 # Google analytics
-# google_analytics: [Tracking ID]
+google_analytics: "G-KGGWV21C0M"
 
 # If you want to generate website sitemap, you can set true
 # sitemap: false
